fix: Replace Arrays.asList with List.of for improved readability in validation tests